2004-07-18 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow multiple modules and publics in one gpal file.

2004-07-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added _stack_end symbol to gplink to simplify downward growing stacks.

2004-07-13 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.12.2 Released.

2004-07-08 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow empty modules and publics in gpal.
  * Allow if statements in a module or public, but outside of subprograms
    in gpal.

2004-07-07 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added support for manually assigned data memory addresses in gpal.

2004-07-04 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added support for nested case statements in gpal.
  * Added support for multiple switch elements in gpal case statements.

2004-07-03 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added symbol alias feature to gpal.

2004-06-27 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added several new gpal optimizations.

2004-06-25 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Fixed gpasm regression.  Duplicate extern feature can cause assertions.
  * Allow cblocks in gpasm macros.

2004-06-16 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow duplicate extern directives in gpasm.

2004-06-15 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Fixed relocations in idata sections.

2004-05-05 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added labels and gotos to gpal.

2004-05-02 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.12.1 Released.

2004-04-22 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added processor pub file generation.
  * Added default search path to gpal.

2004-04-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added support for #if directive and allow else in column 1.